--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a class="menu__item" href="#">Contacts</a></li>
                     <li>
                         <a class="logo-container" href="#"></a>
-                            <img src="./img/logoRed.png" alt="logo">
+                            <img src="img/logoRed.png" alt="logo">
                         </a>
                     </li>
                     <li>
